syntax = "proto3";

package market;

option go_package = "api-market";

import "google/protobuf/timestamp.proto";
import "common/common.proto";

message InvestmentPosition {
  string figi = 1;
  int32 quantity = 2;
  common.Money price = 3;
}

message Security {
  string id = 1;
  string figi = 2;
  string name = 3;
  common.Money current_price = 4;
  google.protobuf.Timestamp price_updated_at = 5;
}

message SecurityPayment {
  string figi = 1;
  common.Money payment = 2;
  google.protobuf.Timestamp payment_date = 3;
}

message GetInvestmentPositionsRequest {
  string user_id = 1;
  common.AccountBackend backend = 2;
  string account_id = 3;
}

message GetInvestmentPositionsResponse {
  repeated InvestmentPosition positions = 1;
}

message GetSecurityRequest {
  string figi = 1;
}

message GetSecurityResponse {
  Security security = 1;
}

message GetSecuritiesPricesRequest {
  repeated string figis = 1;
}

message GetSecuritiesPricesResponse {
  repeated Security securities = 1;
}

message GetSecuritiesPaymentsRequest {
  repeated string figis = 1;
  google.protobuf.Timestamp start_date = 2;
  google.protobuf.Timestamp end_date = 3;
}

message GetSecuritiesPaymentsResponse {
  repeated SecurityPayment payments = 1;
}

service MarketService {
  rpc GetInvestmentPositions(GetInvestmentPositionsRequest) returns (GetInvestmentPositionsResponse);
  rpc GetSecurity(GetSecurityRequest) returns (GetSecurityResponse);
  rpc GetSecuritiesPrices(GetSecuritiesPricesRequest) returns (GetSecuritiesPricesResponse);
  rpc GetSecurityPayments(GetSecuritiesPaymentsRequest) returns (GetSecuritiesPaymentsResponse);
}
